 - Fix listorder for Taser Pistol/Pistol
 - Fix listorder for Stun and Fire Grenade
 - Fix bulletsprite/arcingshot for Hovertank/Ebomb
 - Fix wrong upgrade for Drone/Scanner
 - Remove AREA51 Terrains as requested from Hobbes
 - Remove IMPROVEDGLOBE.DAT as requested from Hobbes
 - Restructure Ufopaedia Section to be more sane
 - Restructure Resources Files

Version 0.99.7
 - Fix UFOL83.MCD armor values for new MCD check
 - Fix DANWDECOR.MCD armor values for new MCD check
 - Fix AREA51Z.MCD armor values for new MCD check
 - Updated transifex Language files
 - Added partially Czech translation

Version 0.99.6
 - Updated RU translations from transifex
 - Added partial language support for: DE, IT, HU, PL
 - Fix UFOPaedia string typos (thanks SIMON)
 - Fix Index for xcom1 terrorweaponsprites
 - Fix missing rank MUTON_15

Version 0.99.5
 - Fix Mod not loading for openxcom_git_master_2019_06_08_1528 or newer
 - Fix missing Requires for Tank Laser Cannon Upgrades
 - Fix missing energyRecovery for Drones
 - Fix Amsterdam name and string values
 - Fix Armor values for Groundtiles in Alien Bases (Silacoids...)
 - Fix Mujungle Walking TU's
 - Fix Junglemount Walking TU's
 - Updated JA translation from transifex

Version 0.99.4
 - Added Translations for Japanese language, ja (TRANSIFEX)
 - Added Translations for Russian language, ru (TRANSIFEX)
 - Added Translations for British English language  en-GB (TRANSIFEX)
 - Added turned Versions for UBASE_01 (4 Maps total)
 - Added alternate/turned Version 1 for UBASE_01 (4 maps total)
 - Added alternate/turned Version 2 for UBASE_01 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_19 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_20 (4 maps total)
 - Added turned Version for EXPANDEDUBASE_21 (4 maps total) Clonelab
 - Added Soldier Armor Upgrades
 - Added Tank Upgrades
 - Added FloorOb Sprites for Vanilla Plasma Weapons
 - Added Fire Grenade (converted Fire Bombs)
 - Added Modified Sprite for U_EXT02 (remove shadows)